tests/custom/STARIS_2022/operation-type-errors/flatten-type-error-01/stderr.expected
Error:
    Parser error in file: flatten-type-error.essence Error is:
ValidatorError flatten-type-error.essence:2:24:
  |
2 | such that b = (flatten(false) = [false])
  |                        ^^^^^
Type error:
	Expected:"List or Matrix "
	Got: bool

